test/typecheck/y_error_03.j.gold
./y_error_03.j:6:9: error: variable 'a' does not exist
   |
 6 |     a = 1;
   |     ^
