test/typecheck/y_error_03.j
class UWU
{
	Void main()
	{
		Int b;
		a = 1;
	}
}
